@@ -47,7 +47,7 @@ END;
 CREATE TABLE io_group (
   name        VARCHAR(65)  NOT NULL,
   description VARCHAR(128) NOT NULL,
-  slots       TINYBLOB     NOT NULL,
+  slots       TINYBLOB     NOT NULL, -- 2 x INT = 8B
   users       INT          NOT NULL,
   vfsfile     VARCHAR(260) NOT NULL,
   updated     INT UNSIGNED NOT NULL DEFAULT 0,
@@ -70,19 +70,32 @@ CREATE TABLE io_user (
   description VARCHAR(128) NOT NULL,
   flags       VARCHAR(32)  NOT NULL,
   home        VARCHAR(260) NOT NULL,
-  limits      TINYBLOB     NOT NULL,
-  password    TINYBLOB     NOT NULL,
+  limits      TINYBLOB     NOT NULL, --  5 x INT  = 20B
+  password    TINYBLOB     NOT NULL, -- 20 x CHAR = 20B
   vfsfile     VARCHAR(260) NOT NULL,
-  credits     TINYBLOB     NOT NULL,
-  ratio       TINYBLOB     NOT NULL,
-  alldn       TINYBLOB     NOT NULL,
-  allup       TINYBLOB     NOT NULL,
-  daydn       TINYBLOB     NOT NULL,
-  dayup       TINYBLOB     NOT NULL,
-  monthdn     TINYBLOB     NOT NULL,
-  monthup     TINYBLOB     NOT NULL,
-  wkdn        TINYBLOB     NOT NULL,
-  wkup        TINYBLOB     NOT NULL,
+  credits     TINYBLOB     NOT NULL, -- 25 x INT64 = 200B
+  ratio       TINYBLOB     NOT NULL, -- 25 x INT   = 100B
+  alldn       BLOB         NOT NULL, -- 3 x 25 x INT64 = 600B
+  allup       BLOB         NOT NULL,
+  daydn       BLOB         NOT NULL,
+  dayup       BLOB         NOT NULL,
+  monthdn     BLOB         NOT NULL,
+  monthup     BLOB         NOT NULL,
+  wkdn        BLOB         NOT NULL,
+  wkup        BLOB         NOT NULL,
+  creator     VARCHAR(65)  NOT NULL,
+  createdon   BIGINT       NOT NULL,
+  logoncount  INT          NOT NULL,
+  logonlast   BIGINT       NOT NULL,
+  logonhost   VARCHAR(97)  NOT NULL,
+  maxups      INT          NOT NULL,
+  maxdowns    INT          NOT NULL,
+  maxlogins   INT          NOT NULL,
+  expiresat   BIGINT       NOT NULL,
+  deletedon   BIGINT       NOT NULL,
+  deletedby   VARCHAR(65)  NOT NULL,
+  deletedmsg  VARCHAR(65)  NOT NULL,
+  opaque      VARCHAR(257) NOT NULL,
   updated     INT UNSIGNED NOT NULL DEFAULT 0,
   lockowner   VARCHAR(36)           DEFAULT NULL,
   locktime    INT UNSIGNED NOT NULL DEFAULT 0,
