@@ -1,5 +1,8 @@
 nxMyDB v2.0.0 (Not released):
   NEW: Compatibility with ioFTPD v6.8 and newer.
+  CHG: Database schema required several changes for the 25 stats sections and new fields.
+  FIX: Increase the "host" column by one character in table "io_user_hosts".
+  FIX: User credits, ratio, and stats were read from the wrong columns.
 
 nxMyDB v1.0.0 (Jan 9, 2009):
   NEW: Updated MySQL Client Library (libmysql.dll) to v5.1.30.
